@@ -4640,3 +4640,6 @@ v0.92.0.11:
   - Fix mayors and kings not paying the bail costs specified in the config.
 0.96.1.13:
   - Fix friendly fire not being respected during wars.
+  - Fix players being pulled around by fishing hooks in non-PVP plots.
+    - Closes #4092.
+  - Fix sentinalpvp bots causing NotRegisteredExceptions.
